Fix profile overflow

--- a/frontend/src/ui/section/profile/Profile.scss
+++ b/frontend/src/ui/section/profile/Profile.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
+  overflow-x: hidden;
 
   .avatar {
     display: flex;
